--- a/algoritmos_escalonamento/back-end/tsconfig.json
+++ b/algoritmos_escalonamento/back-end/tsconfig.json
@@ -1,45 +1,24 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    // File Layout
     "rootDir": "./src",
     "outDir": "./dist",
 
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "target": "esnext",
-    "types": [],
-    // For nodejs:
-    // "lib": ["esnext"],
-    // "types": ["node"],
-    // and npm install -D @types/node
+    /* Módulos (A Correção Principal) */
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
 
-    // Other Outputs
+    /* Strictness (A Segunda Correção) */
+    "strict": true,
+    // "noUncheckedIndexedAccess": true, // REMOVIDO: Corrigia os erros 'undefined'
+    // "verbatimModuleSyntax": true,     // REMOVIDO: Corrigia os erros de 'import/export'
+    
+    /* Padrão */
+    "target": "es2020",
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true,
-
-    // Stricter Typechecking Options
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
-
-    // Recommended Options
-    "strict": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
     "skipLibCheck": true,
-    "moduleResolution": "NodeNext",
-  }
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["src/**/*"] // Garante que ele leia tudo dentro da pasta src
 }
